<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>climber_base</name>
  <version>0.0.0</version>
  <description>Mecanum wheel drive robot for climbing simulation</description>
  <maintainer email="lucashorsman@gmail.com">riplab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core dependencies -->
  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclpy</depend>

  <!-- ros2_control dependencies -->
  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>ros2_control</depend>
  <depend>controller_interface</depend>

  <!-- Controllers -->
  <depend>mecanum_drive_controller</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>

  <!-- Custom messages -->
  <depend>climber_msgs</depend>

  <!-- Gazebo Sim (gz) dependencies -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>

  <!-- Exec dependencies -->
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/climber_base_hardware.xml"/>
  </export>
</package>
